@@ -5,7 +5,7 @@ parts +=
 
 
 [versions]
-collective.recipe.solrinstance = 3.1
+collective.recipe.solrinstance = 3.3
 gocept.download = 0.9.5
 
 
